# OctaChainer2

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StandaloneApp.cpp  StandaloneApp.h  StandaloneAppMainWindow.cpp  StandaloneAppMainWindow.h
src/Core/: AudioClip.cpp  AudioClip.h  AudioFileLoader.cpp  AudioFileLoader.h  AudioPlaybackEngine.cpp  AudioPlaybackEngine.h  AudioUtil.cpp  AudioUtil.h  NumberValues.h  OtFileFormat.h  OtWriter.cpp  OtWriter.h  SettingsOptions.h  Slice.h  StateHandler.cpp  StateHandler.h  StateIdentifiers.h  StateValueDefinitions.h
src/UI/: AudioPanelComponent.cpp  AudioPanelComponent.h  DropdownComponent.cpp  DropdownComponent.h  MainComponent.cpp  MainComponent.h  MainMenuBarModel.cpp  MainMenuBarModel.h  NumberInputComponent.cpp  NumberInputComponent.h  PanelComponent.cpp  PanelComponent.h  SampleListComponent.cpp  SampleListComponent.h  SectionComponent.cpp  SectionComponent.h  SettingsPanelComponent.cpp  SettingsPanelComponent.h  SliceListComponent.cpp  SliceListComponent.h  Style.h  StyleSheet.cpp  StyleSheet.h  TextInputComponent.cpp  TextInputComponent.h  TransportButtonComponent.cpp  TransportButtonComponent.h  WaveformComponent.cpp  WaveformComponent.h
